--- a/src/Assets/Css/Order.css
+++ b/src/Assets/Css/Order.css
@@ -12,13 +12,15 @@
   width: 100%;
   height: 80px;
   position: sticky;
-  top: 0;
+  top: -32px;
   background: #ffffff;
+  box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
 }
 #navthed > th {
   font-weight: 400;
   font-size: 25px;
-  color: #004d40;
+  color: black;
+  font-family: sans-serif;
 }
 #tdtd > td {
   font-weight: 400;
